# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt  main.cpp
RayTracer/: CMakeLists.txt
RayTracer/include/: RayTracer.h
RayTracer/src/Application/: RayTracer.cpp  RayTracer.h
RayTracer/src/Backend/: Device.cpp  Device.h  GraphicsBackend.cpp  GraphicsBackend.h  SwapChain.cpp  SwapChain.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  debug.h  utils.cpp  utils.h
RayTracer/src/Common/: Color.h  NonCopyable.h  NonMovable.h  defs.h
RayTracer/src/Geometry/: Intersections.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  TriangleMesh.cpp  TriangleMesh.h
RayTracer/src/Materials/: Checkerboard.cpp  Checkerboard.h  Dielectric.cpp  Dielectric.h  Diffuse.cpp  Diffuse.h  Glossy.cpp  Glossy.h  Material.h  Metal.cpp  Metal.h  Mirror.cpp  Mirror.h
RayTracer/src/Platform/: Window.cpp  Window.h
RayTracer/src/Renderer/: Film.cpp  Film.h  Renderer.cpp  Renderer.h  Tracer.h  WhittedTracer.cpp  WhittedTracer.h
RayTracer/src/Scene/: Camera.cpp  Camera.h  Light.h  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h
RayTracer/src/Utils/: Profiler.cpp  Profiler.h
